RESOLVED FIXED202048
ApplicationStateTracker::m_isBackground initialization does not account for UIScenes
https://bugs.webkit.org/show_bug.cgi?id=202048
Summary ApplicationStateTracker::m_isBackground initialization does not account for U...
Chris Dumez
Reported 2019-09-20 09:14:27 PDT
ApplicationStateTracker::m_isBackground initialization does not account for UIScenes, it merely checks the visibility state of the whole app. It should instead check the visibility state of the window's UIScene.
Attachments
Patch (4.47 KB, patch)
2019-09-20 09:15 PDT, Chris Dumez
no flags
Patch (4.88 KB, patch)
2019-09-20 11:20 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-09-20 09:15:48 PDT
Chris Dumez
Comment 2 2019-09-20 11:20:04 PDT
Geoffrey Garen
Comment 3 2019-09-20 13:09:52 PDT
Comment on attachment 379248 [details] Patch r=me
Chris Dumez
Comment 4 2019-09-20 14:37:29 PDT
Comment on attachment 379248 [details] Patch Clearing flags on attachment: 379248 Committed r250154: <https://trac.webkit.org/changeset/250154>
Chris Dumez
Comment 5 2019-09-20 14:37:31 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-09-20 14:38:17 PDT
Note You need to log in before you can comment on or make changes to this bug.